--- a/.github/workflows/build-release-binary.yml
+++ b/.github/workflows/build-release-binary.yml
@@ -18,7 +18,9 @@ jobs:
           ref: ${{ github.event.release.target_commitish }}
 
       - name: Install toolchain from `rust-toolchain.toml`
-        run: rustup show
+        run: | 
+          rustup show
+          rustup target add ${{ matrix.target }}
 
       - uses: Swatinem/rust-cache@v1.3.0
         with:
